--- a/TextAdventureWLogan/README
+++ b/TextAdventureWLogan/README
@@ -1,1 +1,5 @@
-Read Me
+#Text Based Game
+
+Text based adventure game that uses Dungeons and Dragons as its stat backing for player and enemy stats and combat. Simple and small, but mostly functional.
+*All of this becuase of him*
+I employed the help of a friend, Logan, because i can't figure out code sequence for the life of me.
